# readvision

./: .gitignore  LICENSE  Makefile  README.md  migrate_to_new_structure.py  pyproject.toml  translate.py
.devcontainer/: devcontainer.json
docs/: PAGE_ORDERING_FIX.md  QUICK_REFERENCE.md  README_word_output.md
examples/: arabic_examples.py  examples.py  test_word_output.py
src/readvision/: __init__.py
src/readvision/cli/: __init__.py  main.py
src/readvision/core/: __init__.py  processor.py
src/readvision/ui/: __init__.py  app.py  streamlit_app.py
src/readvision/utils/: __init__.py  document_creator.py  text_cleaner.py  translator.py
tests/: __init__.py  conftest.py  test_cli.py  test_processor.py  test_text_cleaner.py
